<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_bnv_home"
        android:icon="@drawable/ic_bnv_home"
        android:title="@string/bnv_home" />
    <item
        android:id="@+id/item_bnv_style"
        android:icon="@drawable/ic_bottom_navi_style_28"
        android:enabled="false"
        android:title="@string/bnv_style"/>
    <item
        android:id="@+id/item_bnv_shop"
        android:icon="@drawable/ic_bottom_navi_shop_28"
        android:enabled="false"
        android:title="@string/bnv_shop"/>
    <item
        android:id="@+id/item_bnv_saved"
        android:icon="@drawable/ic_bottom_navi_saved_28"
        android:enabled="false"
        android:title="@string/bnv_saved"/>
    <item
        android:id="@+id/item_bnv_my"
        android:icon="@drawable/ic_bottom_navi_my_28"
        android:enabled="false"
        android:title="@string/bnv_my"/>
</menu>